--- a/sass/style.sass
+++ b/sass/style.sass
@@ -117,14 +117,14 @@ input.inpt
 
 .radiobutton-inline
   padding-left: 0
-.radio-cont
+.radio-cont-sn
   margin: 5px 0
-.radio-bg
+.radio-bg-sn
   position: relative
   display: inline-block
   top: 3px
   margin-right: 2px
-  .bg-block
+  .bg-block-sn
     background: transparent url("../img/radiobtn.png") 0 0 no-repeat
     width: 28px
     height: 28px
@@ -139,15 +139,15 @@ input.inpt
 
 .checkbox-style
   padding-left: 0
-.check-cont
+.check-cont-sn
   margin: 5px 0
-.check-bg
+.check-bg-sn
   vertical-align: top
   position: relative
   display: inline-block
   top: 3px
   margin-right: 2px
-  .bg-block
+  .bg-block-sn
     background: transparent url("../img/checkbox.png") 0 0 no-repeat
     width: 19px
     height: 19px
