--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,98 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
+.check-cont-sn {
+  margin: 5px 0; }
+
+.check-bg-sn {
+  vertical-align: top;
+  position: relative;
+  display: inline-block;
+  top: 3px;
+  margin-right: 2px;
+  margin-left: -20px; }
+  .check-bg-sn .bg-block-sn {
+    background: white;
+    width: 12px;
+    height: 12px;
+    cursor: pointer;
+    border: 1px solid #444444; }
+    .check-bg-sn .bg-block-sn span {
+      background: #66bce8;
+      width: 12px;
+      height: 12px;
+      cursor: pointer;
+      border: 1px solid #0090d9;
+      position: relative;
+      display: block;
+      top: -1px;
+      left: -1px;
+      font-size: 8px;
+      color: white;
+      text-align: center; }
+      .check-bg-sn .bg-block-sn span:after {
+        content: "\e013";
+        position: relative;
+        top: 1px;
+        display: inline-block;
+        font-family: "Glyphicons Halflings";
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale; }
+
+.radio-cont-sn {
+  margin: 5px 0; }
+
+.radio-bg-sn {
+  vertical-align: top;
+  position: relative;
+  display: inline-block;
+  top: 3px;
+  margin-right: 2px;
+  margin-left: -20px; }
+  .radio-bg-sn .bg-block-sn {
+    background: white;
+    border: 1px solid #444444;
+    width: 12px;
+    height: 12px;
+    cursor: pointer;
+    border-radius: 999px;
+    -moz-border-radius: 999px;
+    -webkit-border-radius: 999px; }
+    .radio-bg-sn .bg-block-sn span {
+      position: relative;
+      background: white;
+      width: 12px;
+      height: 12px;
+      cursor: pointer;
+      display: block;
+      top: -1px;
+      left: -1px; }
+      .radio-bg-sn .bg-block-sn span:before {
+        content: "";
+        position: relative;
+        border: 1px solid #0090d9;
+        width: 12px;
+        height: 12px;
+        border-radius: 999px;
+        -moz-border-radius: 999px;
+        -webkit-border-radius: 999px;
+        display: block; }
+      .radio-bg-sn .bg-block-sn span:after {
+        background: #0090d9;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -3px;
+        margin-top: -3px;
+        width: 6px;
+        height: 6px;
+        border-radius: 999px;
+        -moz-border-radius: 999px;
+        -webkit-border-radius: 999px;
+        display: block; }
+
 * {
   border: none;
   outline: none;
