--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700)
+@import "mixibs"
+@import "UIsn"
+
 *
   border: none
   outline: none
